Changed ss-play javascript call to include return false. This avoids jumping to top. Working on protostar-table layout.

--- a/SermonSpeaker4.0/com_sermonspeaker/media/css/sermonspeaker.css
+++ b/SermonSpeaker4.0/com_sermonspeaker/media/css/sermonspeaker.css
@@ -88,9 +88,6 @@ hr.ss-serie-player, hr.ss-sermons-player, hr.ss-speaker-player{
 	padding:0;
 	margin:0;
 }
-.ss-title{
-	width:20%;
-}
 .ss-current{
 	background:#EBFFEB;
 	border-radius:4px;
